# pacman-helper

./: Cargo.toml  LICENSE  README.md
src/: args.rs  lib.rs  main.rs
