[package]
name = "pacman-helper"
description = "A program for more simplified options for package management in Arch systems"
authors = ["Maarifa Maarifa"]
categories = ["command-line-utilities"]
rust-version = "1.61.0"
license = "MIT"
repository = "https://github.com/pacman-helper"
version = "0.1.2"
edition = "2021"

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }